tests/ui/errors/snapshots/infer_never_in_generic_expected_position.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:8:47]
 7 │ fn main() {
 8 │   let x: MyResult<Never, int> = MyResult.MyOk(1);
   ·                                               ┬
   ·                                               ╰── expected `Never`, found `int`
 9 │ }
   ╰────
  help: `MyResult.MyOk()` expects `Never` for its first argument. Convert the value to `Never` · code: [infer.type_mismatch]
