tests/ui/errors/snapshots/infer_never_type_alias_as_match_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:8:5]
 7 │   match s {
 8 │     Impossible => {}
   ·     ─────┬────
   ·          ╰── no variant `Impossible` on `Status`
 9 │   }
   ╰────
  help: Available variants for `Status` are `Active` and `Inactive` · code: [resolve.variant_not_found]
