tests/ui/errors/snapshots/infer_never_type_as_if_let_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:5:10]
 4 │ fn test(s: Status) {
 5 │   if let Never = s {}
   ·          ──┬──
   ·            ╰── no variant `Never` on `Status`
 6 │ }
   ╰────
  help: Available variants for `Status` are `Status.Active` and `Status.Inactive` · code: [resolve.variant_not_found]
