tests/ui/errors/snapshots/infer_never_type_as_match_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:6:5]
 5 │   match s {
 6 │     Never => {}
   ·     ──┬──
   ·       ╰── no variant `Never` on `Status`
 7 │   }
   ╰────
  help: Available variants for `Status` are `Active` and `Inactive` · code: [resolve.variant_not_found]
