tests/ui/errors/snapshots/infer_never_type_as_pattern_on_interface_scrutinee.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:6:5]
 5 │   match e {
 6 │     Never => {}
   ·     ──┬──
   ·       ╰── not a variant of any enum in scope
 7 │   }
   ╰────
  help: Check that the variant is defined in the enum and spelled correctly · code: [resolve.variant_not_found]
