tests/ui/errors/snapshots/infer_never_type_as_pattern_on_never_scrutinee.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Variant not found
   ╭─[test.lis:8:5]
 7 │   match diverge() {
 8 │     Never => {}
   ·     ──┬──
   ·       ╰── not a variant of any enum in scope
 9 │   }
   ╰────
  help: Check that the variant is defined in the enum and spelled correctly · code: [resolve.variant_not_found]
